<resources>

    <!--    IMCAPP-->
    <!--    Nos permite añadir el texto-->
    <string name="app_name">AndroidMaster</string>
    <string name="male">Hombre</string>
    <string name="girl">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculator">Calcular</string>
    <string name="recalculator">Re-calcular</string>
    <string name="result">Tu resultado:</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo praa tu peso y altura</string>

    <string name="title_normal">Normal</string>
    <string name="description_normal">Estás en lo óptimo para tu peso y altura</string>

    <string name="title_sobrepeso">SobrePeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo paa tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás muy por encima de lo óptimo paa tu peso y altura</string>


    <!--    TODOAPP-->
    <string name="todo_tittle">Bienvenida, Saharai</string>
    <string name="todo_category">Categoria</string>
    <string name="todo_task">Tareas</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_business">Negocios</string>
    <string name="todo_dialog_personal">Personal</string>
    <string name="todo_dialog_other">Otros</string>

    <string name="todo_create_task">Crear tarea</string>


</resources>